--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <version>7.4.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.languagetool</groupId>
+            <artifactId>language-en</artifactId>
+            <version>5.3</version>
+        </dependency>
     </dependencies>
     
 </project>
